<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/login_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.joanzapata.iconify.widget.IconTextView
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/login_icon"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:text="{ion-heart} {ion-headphone}"
        android:layout_marginTop="20dp"
        android:shadowColor="#22000000"
        android:shadowDx="3"
        android:shadowDy="3"
        android:shadowRadius="1"
        android:textSize="70sp"
        android:textColor="@color/colorPrimary" />

    <!-- TEXTFIELD CONTAINER -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">

        <!-- USERNAME WRAPPER -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ET_TextInputLayout">

            <!-- USERNAME TXT FIELD-->
            <AutoCompleteTextView
                android:id="@+id/login_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_username"
                android:imeActionId="@+id/login"
                android:imeOptions="actionUnspecified"
                android:inputType="textEmailAddress|textWebEmailAddress"
                android:maxLines="1"
                android:padding="8dp"
                android:singleLine="true"
                android:textColorHint="@color/c_green"/>
        </android.support.design.widget.TextInputLayout>


        <!-- PASSWORD WRAPPER -->
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/ET_TextInputLayout">

            <!-- PASSWORD TXT FIELD-->
            <EditText
                android:id="@+id/login_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_password"
                android:imeActionId="@+id/login"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1"
                android:padding="8dp"
                android:singleLine="true"
                android:textColorHint="@color/c_green"/>
        </android.support.design.widget.TextInputLayout>

        <!-- SIGN IN BTN -->
        <Button
            android:id="@+id/login_signin_btn"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/md_grey_400"
            android:layout_marginTop="2dp"
            android:text="@string/sign_in"
            android:background="?android:attr/selectableItemBackground"/>

        <!-- SIGN UP BTN -->

        <Button
            android:id="@+id/login_signup_btn"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/md_grey_400"
            android:layout_marginTop="2dp"
            android:text="@string/sign_up"
            android:background="?android:attr/selectableItemBackground"/>


        <!-- TOGGLE BTN -->
        <Button
            android:id="@+id/login_toggle_signup_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_toggle_signup"
            android:textColor="@color/md_blue_700"
            style="?android:attr/borderlessButtonStyle"
            android:layout_marginTop="40dp"
            android:layout_gravity="center_horizontal"/>


        <!-- Login progress -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ProgressBar
                android:id="@+id/login_progress"
                style="?android:attr/progressBarStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:visibility="invisible"/>

            <include layout="@layout/include_status_message"/>

        </LinearLayout>


    </LinearLayout>


</RelativeLayout>
