...
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:layout_below="@id/profile_friends_title"/>

        <!-- ADD FRIEND BTN-->
        <android.support.design.widget.FloatingActionButton
            android:id="@+id/profile_add_friend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:src="@android:drawable/ic_dialog_alert"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
...
