...
    android:layout_margin="@dimen/activity_horizontal_margin"
    android:background="?attr/selectableItemBackground">

    <!-- PROFILE PICTURE -->
    <com.github.ivbaranov.mli.MaterialLetterIcon
        android:id="@+id/leaderboard_avatar"
        android:layout_width="@dimen/profile_image"
        android:layout_height="@dimen/profile_image"
        android:layout_centerVertical="true"
        android:layout_marginRight="@dimen/avatar_right_margin"
        app:mli_letter_color="@color/c_white"
        app:mli_letters_number="1"
        app:mli_letter_size="20"/>
...
